<resources>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="download_maps">Download Maps</string>
    <string name="download_has_failed">Download has failed. Tap to try again.</string>
    <string name="downloading">Downloading…</string>
    <string name="kilometres">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="later">Later</string>
    <string name="search">Search</string>
    <string name="search_map">Search Map</string>
    <string name="location_is_disabled_long_text">You currently have all Location Services for this device or application disabled. Please enable them in Settings.</string>
    <string name="limited_accuracy">Limited Accuracy</string>
    <string name="precise_location_is_disabled_long_text">To ensure accurate navigation enable Precise Location in settings.</string>
    <string name="zoom_to_country">Show on the map</string>
    <string name="country_status_download_failed">Download has failed</string>
    <string name="try_again">Try Again</string>
    <string name="about_menu_title">About Organic Maps</string>
    <string name="about_headline">Free for everyone, made with love</string>
    <string name="about_proposition_1">• No ads, no tracking, no data collection</string>
    <string name="about_proposition_2">• No battery drain, works offline</string>
    <string name="about_proposition_3">• Fast, minimalist, developed by the community</string>
    <string name="about_developed_by_enthusiasts">Open-source application created by enthusiasts and volunteers.</string>
    <string name="location_settings">Location Settings</string>
    <string name="close">Close</string>
    <string name="unsupported_phone">The app requires hardware accelerated OpenGL. Unfortunately, your device is not supported.</string>
    <string name="download">Download</string>
    <string name="disconnect_usb_cable">Please disconnect USB cable or insert memory card to use Organic Maps</string>
    <string name="not_enough_free_space_on_sdcard">Please free up some space on the SD card/USB storage first in order to use the app</string>
    <string name="download_resources">Before you start using the app, please download the world overview map to your device.\nIt will use %s of storage.</string>
    <string name="download_resources_continue">Go to Map</string>
    <string name="downloading_country_can_proceed">Downloading %s. You can now\nproceed to the map.</string>
    <string name="download_country_ask">Download %s?</string>
    <string name="update_country_ask">Update %s?</string>
    <string name="pause">Pause</string>
    <string name="continue_button">Continue</string>
    <string name="download_country_failed">%s download has failed</string>
    <string name="add_new_set">Add a New List</string>
    <string name="bookmark_set_name">Bookmark List Name</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarks_and_tracks">Bookmarks and Tracks</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="maps_storage">Save maps to</string>
    <string name="maps_storage_summary">Select the folder to download maps to.</string>
    <string name="maps_storage_downloaded">Downloaded maps</string>
    <string name="maps_storage_free_size">%1$s free of %2$s</string>
    <string name="move_maps">Move maps?</string>
    <string name="move_maps_error">Error moving map files</string>
    <string name="wait_several_minutes">This can take several minutes.\nPlease wait…</string>
    <string name="measurement_units">Measurement units</string>
    <string name="measurement_units_summary">Choose between miles and kilometers</string>
    <string name="category_eat">Where to eat</string>
    <string name="category_food">Groceries</string>
    <string name="category_transport">Transport</string>
    <string name="category_fuel">Gas</string>
    <string name="category_parking">Parking</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_secondhand">Second Hand</string>
    <string name="category_hotel">Hotel</string>
    <string name="category_tourism">Sights</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_atm">ATM</string>
    <string name="category_nightlife">Nightlife</string>
    <string name="category_children">Family holiday</string>
    <string name="category_bank">Bank</string>
    <string name="category_pharmacy">Pharmacy</string>
    <string name="category_hospital">Hospital</string>
    <string name="category_toilet">Toilet</string>
    <string name="category_post">Post</string>
    <string name="category_police">Police</string>
    <string name="category_recycling">Recycling</string>
    <string name="category_water">Water</string>
    <string name="category_rv">RV Facilities</string>
    <string name="description">Notes</string>
    <string name="share_bookmarks_email_subject">Organic Maps bookmarks were shared with you</string>
    <string name="share_bookmarks_email_body">Hello!\n\nAttached are my bookmarks; please open them in Organic Maps. If you don\'t have it installed you can download it here: https://omaps.app/get?kmz\n\nEnjoy travelling with Organic Maps!</string>
    <string name="load_kmz_title">Loading Bookmarks</string>
    <string name="load_kmz_successful">Bookmarks loaded successfully! You can find them on the map or on the Bookmarks Manager screen.</string>
    <string name="load_kmz_failed">Failed to load bookmarks. The file may be corrupted or defective.</string>
    <string name="unknown_file_type">The file type is not recognized by the app:\n%1$s</string>
    <string name="failed_to_open_file">Failed to open file %1$s\n\n%2$s</string>
    <string name="edit">Edit</string>
    <string name="unknown_current_position">Your location hasn\'t been determined yet</string>
    <string name="cant_change_this_setting">Sorry, Map Storage settings are currently disabled.</string>
    <string name="downloading_is_active">Map download is in progress now.</string>
    <string name="my_position_share_sms">Check out my current location in Organic Maps! %1$s or %2$s Don\'t have offline maps? Download here: https://omaps.app/get</string>
    <string name="bookmark_share_email_subject">Hey, check out my pin in Organic Maps!</string>
    <string name="my_position_share_email_subject">Hey, check out my current location on the Organic Maps map!</string>
    <string name="my_position_share_email">Hi,\n\nI\'m here now: %1$s. Click this link %2$s or this one %3$s to see the place on the map.\n\nThanks.</string>
    <string name="share">Share</string>
    <string name="email">Email</string>
    <string name="copied_to_clipboard">Copied to clipboard: %s</string>
    <string name="done">Done</string>
    <string name="data_version">OpenStreetMap data: %s</string>
    <string name="osm_log_out_confirmation">Are you sure you want to log out of your OpenStreetMap account?</string>
    <string name="tracks_title">Tracks</string>
    <string name="length">Length</string>
    <string name="share_my_location">Share My Location</string>
    <string name="prefs_group_general">General settings</string>
    <string name="prefs_group_information">Information</string>
    <string name="prefs_group_route">Navigation</string>
    <string name="pref_zoom_title">“+” and “-” buttons on the map</string>
    <string name="pref_zoom_summary">Display on the map</string>
    <string name="pref_auto_night_in_navigation_title">Night style when navigating in the dark</string>
    <string name="pref_map_style_title">Night Mode</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="auto">Auto</string>
    <string name="pref_map_3d_title">Perspective view</string>
    <string name="pref_map_3d_buildings_title">3D buildings</string>
    <string name="pref_map_3d_buildings_disabled_summary">3D buildings are disabled in power saving mode</string>
    <string name="pref_bg_tiles_title">Satellite Imagery</string>
    <string name="pref_bg_tiles_url_title">Server URL</string>
    <string name="pref_bg_tiles_url_error">Enter a valid URL with {z}/{x}/{y}</string>
    <string name="pref_bg_tiles_size_title">Cache size (MB)</string>
    <string name="pref_bg_tiles_opacity_title">Area objects opacity</string>
    <string name="pref_bg_tiles_disclaimer">Custom tile sources are provided by you. Use only services you are allowed to access. You are responsible for attribution, license terms, API keys, quotas, and usage limits.</string>
    <string name="pref_tts_enable_title">Voice Instructions</string>
    <string name="pref_tts_street_names_title">Announce Street Names</string>
    <string name="pref_tts_street_names_description">When enabled, the name of the street or exit to turn onto will be spoken aloud.</string>
    <string name="pref_tts_language_title">Voice Language</string>
    <string name="pref_tts_test_voice_title">Test Voice Directions (TTS, Text-To-Speech)</string>
    <string name="pref_tts_playing_test_voice">Check the volume or system Text-To-Speech settings if you don\'t hear the voice now.</string>
    <string name="pref_tts_unavailable">Not Available</string>
    <string name="pref_map_auto_zoom">Auto zoom</string>
    <string name="placepage_distance">Distance</string>
    <string name="search_show_on_map">View on map</string>
    <string name="menu">Menu</string>
    <string name="website">Website</string>
    <string name="news">News</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
  <string name="main_tab_discover">Discover</string>
  <string name="main_tab_feed">Feed</string>
  <string name="main_tab_camera">Camera</string>
  <string name="main_tab_map">Map</string>
  <string name="main_tab_chats">Chats</string>
  <string name="chats_account">Account</string>
  <string name="chats_new">New chat</string>
  <string name="chats_sign_in_title">Sign in to sync messages across your devices</string>
  <string name="chats_create_account">Create account</string>
  <string name="chats_stories_label">STORIES</string>
  <string name="chats_calls">Calls</string>
  <string name="chats_groups">Groups</string>
  <string name="chats_pinned">PINNED</string>
  <string name="chats_recent">RECENT</string>
  <string name="chats_empty">No conversations yet. Tap + to message someone.</string>
  <string name="chats_filter_all">All</string>
  <string name="call_start">Start call</string>
  <string name="call_search_hint">Search calls</string>
  <string name="call_favorites">FAVORITES</string>
  <string name="call_recent">RECENT</string>
  <string name="call_empty">No calls yet. Tap + to start one.</string>
  <string name="call_filter_missed">Missed</string>
  <string name="call_filter_voice">Voice</string>
  <string name="call_filter_video">Video</string>
  <string name="call_calling">Calling…</string>
  <string name="call_quality_good">● Excellent connection</string>
  <string name="call_you">You</string>
  <string name="call_local_preview">Your camera preview</string>
  <string name="call_mute">♩\nMute</string>
  <string name="call_speaker">◖\nSpeaker</string>
  <string name="call_bluetooth">🎧\nBluetooth</string>
  <string name="call_camera">▣\nCamera</string>
  <string name="call_flip">↺\nFlip</string>
  <string name="call_people">♧\nPeople</string>
  <string name="call_chat">💬\nChat</string>
  <string name="call_end">End call</string>
  <string name="call_answer">Answer</string>
  <string name="call_reply_message">Reply</string>
  <string name="call_silence">Silence</string>
  <string name="call_participants">Participants</string>
  <string name="call_nightguard_banner">NightGuard · live location and arrival stay private to this session</string>
</resources>